compiler/testData/diagnostics/tests/controlFlowAnalysis/inlinedBreakContinueFeatureDisabled.diag.txt
/inlinedBreakContinueFeatureDisabled.kt:16:15: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        foo { break }
              ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:17:15: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        foo { continue }
              ^^^^^^^^
/inlinedBreakContinueFeatureDisabled.kt:18:22: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        foo(fun () { break })
                     ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:19:22: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        foo(fun () { continue })
                     ^^^^^^^^
/inlinedBreakContinueFeatureDisabled.kt:25:14: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        bar({break}, {})
             ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:26:14: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        bar({continue}, {})
             ^^^^^^^^
/inlinedBreakContinueFeatureDisabled.kt:28:21: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        bar(fun () {break}, fun () {})
                    ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:29:21: error: the feature "break continue in inline lambdas" is only available since language version 2.2
        bar(fun () {continue}, fun () {})
                    ^^^^^^^^
/inlinedBreakContinueFeatureDisabled.kt:35:19: error: 'break' or 'continue' jumps across a function or a class boundary
        bar({}, { break }, { break })
                  ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:35:30: error: 'break' or 'continue' jumps across a function or a class boundary
        bar({}, { break }, { break })
                             ^^^^^
/inlinedBreakContinueFeatureDisabled.kt:36:19: error: 'break' or 'continue' jumps across a function or a class boundary
        bar({}, { continue }, { break })
                  ^^^^^^^^
/inlinedBreakContinueFeatureDisabled.kt:36:33: error: 'break' or 'continue' jumps across a function or a class boundary
        bar({}, { continue }, { break })
                                ^^^^^

